create full crud for category && create .env.example
